<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_250dp"
                android:background="@drawable/signin_background"
                android:orientation="vertical"
                android:padding="@dimen/dimen_10dp"
                >



            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_30dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtwc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:fontFamily="@font/montserratalternates_bold"
                    android:text="@string/lbl_welcome"
                    android:textColor="@color/darkcolor"
                    android:textSize="@dimen/dimen_30sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtsaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratalternates_bold"
                    android:text="@string/lbl_please_sign_in_to_continue"
                    android:textColor="@color/darkcolor"
                    android:textSize="@dimen/dimen_20sp" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="36"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="@dimen/dimen_10dp"
                    android:shadowColor="@color/black"
                    android:hint="@string/lbl_email"
                    android:textColorHint="@color/lightcolor"
                    android:textColor="@color/lightcolor"
                    android:textSize="@dimen/dimen_18sp"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:imeOptions="actionNext"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="@dimen/dimen_10dp"
                    android:shadowColor="@color/black"
                    android:hint="@string/lbl_password"
                    android:textColorHint="@color/lightcolor"
                    android:textColor="@color/lightcolor"
                    android:textSize="@dimen/dimen_18sp"
                    />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnsignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/montserrat_bold"
                    android:imeOptions="actionDone"
                    android:text="@string/lbl_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20sp"
                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_40dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/montserratalternates_bold"
                        android:text="@string/lbl_don_t_have_an_account"
                        android:textColor="@color/lightcolor"
                        android:textSize="@dimen/dimen_14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtsignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/montserratalternates_bold"
                        android:text="@string/lbl_sign_up"
                        android:textColor="@color/darkcolor"
                        android:textSize="@dimen/dimen_20sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>



            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>